--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="style.css">
     <title>Portfólio</title>
 </head>
@@ -50,6 +51,46 @@
             </div>
             <div class="photo">
                 <img src="./images/pessoa.png" alt="Foto pessoal">
+            </div>
+        </section>
+        <section class="specialties container">
+            <h2 class="title-specialties">Minhas <span>Especialidades.</span></h2>
+            <div class="box-specialties">
+                <article>
+                    <i class="bi bi-code-slash"></i>
+                    <h3>Website</h3>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                        Numquam quisquam minus maiores quaerat architecto 
+                        quibusdam modi saepe quas fugit repudiandae! Perferendis 
+                        cumque aut obcaecati aspernatur repellendus beatae 
+                        officiis, non quos.
+                    </p>
+                </article>
+
+                <article>
+                    <i class="bi bi-cart2"></i>
+                    <h3>Loja Online</h3>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                        Numquam quisquam minus maiores quaerat architecto 
+                        quibusdam modi saepe quas fugit repudiandae! Perferendis 
+                        cumque aut obcaecati aspernatur repellendus beatae 
+                        officiis, non quos.
+                    </p>
+                </article>
+
+                <article>
+                    <i class="bi bi-wordpress"></i>
+                    <h3>Blog</h3>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                        Numquam quisquam minus maiores quaerat architecto 
+                        quibusdam modi saepe quas fugit repudiandae! Perferendis 
+                        cumque aut obcaecati aspernatur repellendus beatae 
+                        officiis, non quos.
+                    </p>
+                </article>
             </div>
         </section>
     </main>
