finalizacao da secao de apresentacao.

--- a/index.html
+++ b/index.html
@@ -93,6 +93,42 @@
                 </article>
             </div>
         </section>
+        <section class="presentation container">
+            <div class="photo">
+                <img src="./images/foto.png" alt="foto de perfil">
+            </div>
+            <div class="profile">
+                <h2>Muito prazer, <span>sou Bruno Rodrigues</span></h2>
+                <p>
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
+                    Laborum soluta eaque exercitationem, excepturi dignissimos 
+                    dolorum autem officia culpa in reiciendis similique iusto 
+                    totam rem obcaecati maiores natus sed ad pariatur.
+                </p>
+                <p>
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                </p>
+                <div class="social">
+                    <ul>
+                        <li>
+                            <a href="#">
+                                <i class="bi bi-youtube"></i>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <i class="bi bi-instagram"></i>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <i class="bi bi-linkedin"></i>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </section>
     </main>
     <footer></footer>
 </body>
