--- a/index.html
+++ b/index.html
@@ -129,23 +129,25 @@
                 </div>
             </div>
         </section>
-        <section class="portfolio container">
-            <div class="portfolio-title">
-                <h2><span>Meu</span> Portfólio<span>.</span></h2>
-                <p>
-                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ea, a.
-                </p>
-            </div>
-            <div class="cards-portfolio">
-                <article>
-                    <div>Projeto 1</div>
-                </article>
-                <article>
-                    <div>Projeto 2</div>
-                </article>
-                <article>
-                    <div>Projeto 3</div>
-                </article>
+        <section class="portfolio">
+            <div class="container">
+                <div class="portfolio-title">
+                    <h2><span>Meu</span> Portfólio<span>.</span></h2>
+                    <p>
+                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ea, a.
+                    </p>
+                </div>
+                <div class="cards-portfolio">
+                    <article>
+                        <div>Projeto 1</div>
+                    </article>
+                    <article>
+                        <div>Projeto 2</div>
+                    </article>
+                    <article>
+                        <div>Projeto 3</div>
+                    </article>
+                </div>
             </div>
         </section>
     </main>
