testando versões do vscode para dicas de html

--- a/index.html
+++ b/index.html
@@ -150,6 +150,16 @@
                 </div>
             </div>
         </section>
+        <secttion class="form container">
+            <div class="title-form">
+                <h2><span>Fala</span> Comigo</h2>
+                <p>Vamos tirar suas ideias do papel</p>
+            </div>
+            <form>
+                <input type="text">
+                
+            </form>
+        </secttion>
     </main>
     <footer>oi</footer>
 </body>
